created five sections and div main doc, tryed to add some pre style

--- a/index.html
+++ b/index.html
@@ -11,15 +11,36 @@
       <header>
         <nav>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li class="heading">first</li>
+            <li class="heading">second</li>
+            <li class="heading">third</li>
+            <li class="heading">four</li>
+            <li class="heading">five</li>
           </ul>
         </nav>
       </header>
+      <div id="main-doc">
+        <section class="first-section">
+          <h2>First</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum consequuntur autem temporibus ullam quae quo amet aliquam quasi sed illo?</p>
+        </section>
+        <section class="second-section">
+          <h2>Second</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nam laborum animi mollitia repellendus! Quas impedit tenetur harum similique reprehenderit!</p>
+        </section>
+        <section class="third-section">
+          <h2>Third</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae quis nam dolores eum ex possimus.</p>
+        </section>
+        <section class="four-section">
+          <h2>Four</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur laboriosam cupiditate officiis!</p>
+        </section>
+        <section class="five-section">
+          <h2>Five</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, fuga nostrum quos sequi tempore odit totam obcaecati inventore corrupti animi accusamus commodi perferendis, deserunt deleniti! Vero, dolorum exercitationem? Fuga, magnam!</p>
+        </section>
+      </div>
     <script  src="js/index.js"></script>
   </body>
 </html>
