add styling to p, h2 and headin also creatin add padding and margin to p, headin, and h2

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>Lorem Documentation</title>
     <link rel="stylesheet" href="./style.css">
   </head>
 
@@ -11,34 +11,39 @@
       <header>
         <nav>
           <ul>
-            <li class="heading">first</li>
-            <li class="heading">second</li>
-            <li class="heading">third</li>
-            <li class="heading">four</li>
-            <li class="heading">five</li>
+            <li class="heading"><a href="#first-section">First</a></li>
+            <li class="heading"><a href="#second-section">Second</a></li>
+            <li class="heading"><a href="#third-section">Third</a></li>
+            <li class="heading"><a href="#four-section">Four</a></li>
+            <li class="heading"><a href="#five-section">Five</a></li>
           </ul>
         </nav>
       </header>
       <div id="main-doc">
-        <section class="first-section">
+        <section class="first-section" id="first-section">
           <h2>First</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum consequuntur autem temporibus ullam quae quo amet aliquam quasi sed illo?</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, culpa vero. Magni asperiores voluptatum tenetur dolor tempora nisi amet, quas laborum saepe eos voluptas in sunt explicabo delectus magnam quod? Sit dolorem vero tenetur culpa laborum in accusantium, totam molestiae odit, natus dignissimos distinctio odio praesentium facilis tempore quae fuga?</p>
         </section>
-        <section class="second-section">
+        <section class="second-section" id="second-section">
           <h2>Second</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nam laborum animi mollitia repellendus! Quas impedit tenetur harum similique reprehenderit!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quam velit illo laborum voluptatibus consequatur omnis corrupti odio, ea impedit veritatis aut ad repellat? Cupiditate quam placeat, similique ullam quaerat officia ipsa totam asperiores sapiente dolore, fugit perferendis, ipsam in soluta maxime quae itaque recusandae neque iste sed nesciunt natus?</p>
         </section>
-        <section class="third-section">
+        <section class="third-section" id="third-section">
           <h2>Third</h2>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae quis nam dolores eum ex possimus.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quos repudiandae rerum ex nemo debitis, nihil distinctio eaque sequi natus consequuntur ipsum nam, mollitia provident doloribus perferendis! Dolorem atque ut excepturi deleniti illum possimus optio perferendis minima minus, magni eum recusandae ab quia. Nostrum reprehenderit nemo temporibus, omnis cupiditate ad!</p>
         </section>
-        <section class="four-section">
+        <section class="four-section" id="four-section">
           <h2>Four</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur laboriosam cupiditate officiis!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit et unde, veniam odio temporibus ut iusto, quasi blanditiis molestias voluptatem excepturi dolor expedita libero sit placeat, aut illum quae odit repellat amet! Veniam earum odio distinctio fugit, qui labore est cupiditate rerum quasi magni sequi maiores harum reprehenderit a sunt.</p>
         </section>
-        <section class="five-section">
+        <section class="five-section" id="five-section">
           <h2>Five</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, fuga nostrum quos sequi tempore odit totam obcaecati inventore corrupti animi accusamus commodi perferendis, deserunt deleniti! Vero, dolorum exercitationem? Fuga, magnam!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus voluptas omnis facilis fugit aliquam nostrum accusantium repellat soluta culpa blanditiis eos, eveniet aliquid consequatur officiis inventore necessitatibus aperiam odit. Harum vel deserunt necessitatibus cumque voluptatum odit enim rerum exercitationem sequi mollitia asperiores deleniti temporibus laudantium dicta sed vitae eveniet, voluptatem cupiditate recusandae iure dignissimos officiis blanditiis? Iure saepe repudiandae ad.</p>
         </section>
       </div>
     <script  src="js/index.js"></script>
